index.html updated from https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </ol>
 <h2 id="energy">Energy:</h2>
 <ol>
-<li><a href="/Progress.md">Progress</a></li>
+<li><a href="/Progress.html">Progress</a></li>
 <li></li>
 </ol>
 
