index.html updated from https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <h2 id="energy">Energy:</h2>
 <ol>
 <li><a href="/Progress.html">Progress</a></li>
+<li><a href="Pics/Pics.html">Pics</a></li>
 <li></li>
 </ol>
 
