--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="stackedit__right">
     <div class="stackedit__html">
       <h1 id="home">Home:</h1>
-<p>[TOC}</p>
+<p>[TOC]</p>
 <p>links:</p>
 <ol>
 <li>Github Pages: <a href="http://nopenai.github.io">nopenai.github.io</a></li>
