Pics/Pics.html updated from https://stackedit.io/

--- a/Pics/Pics.html
+++ b/Pics/Pics.html
@@ -16,7 +16,7 @@
   </div>
   <div class="stackedit__right">
     <div class="stackedit__html">
-      <p><a href="https://miro.medium.com/v2/1*GzXEVpaY3ycoVgkaGVQdAw.jpeg">https://miro.medium.com/v2/1*GzXEVpaY3ycoVgkaGVQdAw.jpeg</a>&lt;/&gt;</p>
+      <p><img src="https://miro.medium.com/v2/1*GzXEVpaY3ycoVgkaGVQdAw.jpeg" alt="Cattty"></p>
 
     </div>
   </div>
